--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,25 @@
-<p>login works!</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="login.component.sass" />
+  </head>
+  <body>
+    <div class="login-form">
+      <form action="/submit_login" method="post">
+        <input
+          type="text"
+          id="username"
+          name="username"
+          placeholder="Email or Phone"
+        />
+        <input
+          type="password"
+          id="password"
+          name="password"
+          placeholder="Password"
+        />
+        <input type="submit" value="Log In" />
+      </form>
+    </div>
+  </body>
+</html>
