--- a/src/app/login/login.component.sass
+++ b/src/app/login/login.component.sass
@@ -1,5 +1,43 @@
-p
-    color: blue
-    font-size: 20px
-    font-weight: bold
-    text-align: center
+body
+  display: flex
+  justify-content: center
+  align-items: center
+  height: 100vh
+  margin: 0
+  background-color: #030303
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+
+.login-form
+  width: 300px
+  padding: 20px
+  border-radius: 5px
+  background-color: #fff
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2)
+
+form
+  display: flex
+  flex-direction: column
+
+input[type="text"], input[type="password"]
+  margin-bottom: 10px
+  padding: 5px
+  border: 1px solid #ccc
+  border-radius: 3px
+  &::placeholder
+    color: rgba(0,0,0,0.5)
+
+input[type="submit"]
+  cursor: pointer
+  background-color: #4267b2
+  color: white
+  padding: 10px 20px
+  border: none
+  border-radius: 4px
+  text-align: center
+  text-decoration: none
+  display: inline-block
+  font-size: 16px
+  margin: 4px 2px
+  transition-duration: 0.4s
+  &:hover
+    background-color: #314e86
